2000-10-10 16:35 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * include/hbver.h
     % Bumped the revision code to "g" and the date to 2000-10-10
       for an interim build with the latest ADS RDD enhancements.

2000-10-10 16:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * include/hberrors.h
   * source/pp/pplib.c
     % Changed the two char * parameters for hb_compGenError()
       and hb_compGenWarning() to const char *.
   * source/pp/ppcore.c
     % Removed the artificial nested include file limit test and
       replaced it with a test for errno == EMFILE after returning
       from the OpenInclude() function, which starts by clearing
       errno and does not try to search the path if the standard
       open attempt results in errno being set to EMFILE.
     % Added displaying the C RTL error message corresponding to
       errno if OpenInclude() returns an error that isn't EMFILE.

2000-10-10 16:12 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   *contrib/rdd_ads/ads1.c
     * fixed bug with creating compound indexes, reported by Antonio Linares

2000-10-10 14:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/workarea.c
     * fixed bug, related to fields handling
       ( there was a bug report by David Thornley in harbourusers )

2000-10-10 12:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * contrib/mysql/mysql.c
     * Fix in sqlConnect() for support of versions > 3.22.00

2000-10-10 10:58 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/dbfcdx/dbfcdx1.h
     * added #pragma pack(1) and #pragma pack() for structure alignment
       with GNU C compiler

2000-10-09 22:53 UTC+0200 JFL (mafact) <jfl@mafact.com>
   * TGET.PRG Small improvement within :Undo() method
     to allow update of the var (As John Skelton remark)
     Also, the standart class name is now Get in place of Tget.
     This is for compatibility with Cl*pper code where oGet:Classname()
     should return Get and not Tget.